# til

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  Pipfile  README.md  Vagrantfile  app.py  config.py  create_gce.sh  data_loader.py  discriminator.py  docker-compose.yml  generator.py  get_started.py  google_oauth2.py  google_photos.py  image.py  index.html  index.js  init_gce.sh  package.json  requirements.txt  test.py  touch_sound.py  train.py  vue.config.js
cmd/correspondence_grouping/: CMakeLists.txt  correspondence_grouping.cpp
cpp/npp_median_filter/: CMakeLists.txt  README.md
cpp/npp_median_filter/tools/: build.ps1  cmake.ps1
cpp/point-cloud-library-sample/: CMakeLists.txt
machine_learning/kaggle_ops/: .sample.env  MLproject  README.md  pyproject.toml
machine_learning/kaggle_ops/data/: .gitignore
machine_learning/kaggle_ops/models/: config.yml
machine_learning/kaggle_ops/notebooks/: colab.ipynb
machine_learning/kaggle_ops/scripts/: gcp.sh
machine_learning/kaggle_ops/src/data/: dataset.py
machine_learning/kaggle_ops/src/models/: mlproject.py  net_cnn.py  pl_utils.py  trainer.py
machine_learning/mahalanobis_distance/: README.md  log_handler.py  md2.py  pyproject.toml
machine_learning/mlflow_tracking_server/: .dockerignore  .gitignore  .sample.env  Dockerfile  README.md  docker_command.sh  mlflow.sh  mlflow_gc.sh  pyproject.toml  run_mlflow_tracking_server.sh  run_mlflow_tracking_ui.sh
machine_learning/mlflow_tracking_server/src/: convert_artifacts_path.py
machine_learning/nni_example_darts/: README.md  datasets.py  model.py  pyproject.toml  search.py
machine_learning/torch_anomaly_detection/: .sample.env  README.md  pyproject.toml
machine_learning/torch_anomaly_detection/models/v0.1.0_dataset/: config.yml
machine_learning/torch_anomaly_detection/notebooks/: .gitignore  v0.1.0_dataset_hazelnut.ipynb  v0.1.0_hazelnut_simple_cnn.ipynb
machine_learning/torch_anomaly_detection/scripts/: jupyter_notebook_config.py  run_jupyter.sh  run_tensorboard.sh
machine_learning/torch_anomaly_detection/src/data/: celeba.py  celeba_lightning.py  celeba_torch.py  celebaa.py  dataset.py  dataset_torch.py  directories.py  log_utils.py  mvtec_ad.py  mvtecad.py  mvtecad_lightning.py  mvtecad_torch.py  utils.py  utils_input.py
machine_learning/torch_anomaly_detection/src/models/: ae_cnn.py  ae_train.py  cnn_ae.py  gan_train.py  gan_vanila.py  train.py  train_ae.py  train_vae.py  trainer.py  trainer_gan.py  transfer_vae.py  vae_train.py  vae_transfer.py  vae_vanila.py  vanila_vae.py
machine_learning/torch_classification_sample/: README.md  pyproject.toml
machine_learning/torch_classification_sample/data/: .gitignore
machine_learning/torch_classification_sample/src/data/: dataset.py  dataset_food101.py  utils.py
machine_learning/torch_classification_sample/src/models/: trainer.py
machine_learning/torch_time_series_forecasting/: README.md  pyproject.toml
machine_learning/torch_time_series_forecasting/models/: v0.1.0_double_lstm.yml  v0.1.0_simple_lstm.yml  v0.2.0_dilated_cnn.yml
machine_learning/torch_time_series_forecasting/src/data/: dataset.py  directory.py  jena_climate.py
machine_learning/torch_time_series_forecasting/src/models/: dilated_cnn.py  simple_lstm.py  train.py  trainer.py
python/jinja2_sample/: README.md  app.py  download_csv.sh  index.j2  pyproject.toml
python/jinja2_sample/data/: .gitignore
python/torch_autoencoder/: .gitignore  README.md  aetrainer.py  cnn3aepl.py  create_dataset.py  pyproject.toml  simpleautoencoder.py  simpledeepautoencoder.py  simplelstm.py  tqdmupto.py  train.py  view_data.py  vwapdataset.py
python/torch_autoencoder/_data/: .gitignore
python/torch_autoencoder/src/models/: doubledense.py  simplecnnautoencoder.py  simplelstm.py  singledense.py  train.py
python/torch_deep_temporal_clustering/: README.md  pyproject.toml
python/torch_deep_temporal_clustering/dtc_webview/: docker-compose.yml
python/torch_deep_temporal_clustering/src/data/: tqdmupto.py  tsdataset.py
python/torch_deep_temporal_clustering/src/models/: deep_temporal_clustering.py  dtc_trainer.py  train.py
src/til-20220608/: Dockerfile  README.md  docker-compose.yml  index.md  pyproject.toml  setup.cfg
src/til-20220608/.devcontainer/: devcontainer.json
src/til-20220801/backend/: .sample.env  requirements-freeze.txt  requirements.txt  setup.cfg
src/til-20220801/backend/src/: main.py
src/til-20221113/: .sample.env  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt  setup.cfg
src/til-20221113/.devcontainer/: devcontainer.json  docker-compose.extend.yml
src/til-20221120/: .dockerignore  .sample.env  Dockerfile  README.md  docker-compose.yml  requirements-freeze.txt  requirements.txt  setup.cfg  setup.py
src/til-20221120/.devcontainer/: devcontainer.json  docker-compose.extend.yml  docker-compose.local.yml
src/til-20221120/data/: .gitignore
src/til-20221120/src/: convert-to-db.py  data_path.py  db.py  history.py
src/til-20221127/: .dockerignore  .sample.env  Dockerfile  README.md  docker-compose.yml  setup.cfg
src/til-20221127/.devcontainer/: devcontainer.json  docker-compose.extend.yml  docker-compose.local.yml
src/til-20221127/hands-on-serverless-2/: packaged-template.yaml  template.yaml
src/til-20221127/sam-app/: .gitignore
src/til-20221127/sam-app-delete/: README.md  template.yaml
src/til-20230305/: Dockerfile  README.md  pyproject.toml
src/til-20230305/.devcontainer/: devcontainer.json  docker-compose.local.yml  docker-compose.yml
src/til-20230305/data/: .gitignore
src/til-20230305/src/: _load_model.py  run-gui.py  run-nlb200.py  select_items.py  translator.py
src/til-20230407/: .sample.env  README.md  docker-compose.yml  pyproject.toml
src/til-20230407/.devcontainer/: devcontainer.json  docker-compose.extend.yml
src/til-20230407/src/: text-to-speech.py
src/til-20230408/: README.md  pyproject.toml
src/til-20230408/src/: extract-text.py
webapp/small_project_py_js/backend/: main.py  pyproject.toml
webapp/small_spa_with_py/backend/: main.py  pyproject.toml
(+725 files in other folders)
