[tool.poetry]
name = "kaggle_ops"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
numpy = "^1.19.5"
torch = "^1.7.1"
torchvision = "^0.8.2"
pytorch-lightning = "^1.1.5"
pandas = "1.1.5"
python-dotenv = "^0.15.0"
torchinfo = "^1.4.4"
mlflow = "^1.13.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
