[tool.poetry]
name = "machalanobis_distance"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21.0"
black = "^19.10b0"
flake8 = "^3.7.9"
mypy = "^0.770"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
