[tool.poetry]
name = "mlflow_tracking_server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mlflow = "^1.23.1"
google-cloud-storage = "^1.36.0"
crcmod = "^1.7"
tqdm = "^4.59.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
mypy = "^0.812"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
