[tool.poetry]
name = "nni_example_darts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
nni = "^1.8"
python = "^3.7"
torchvision = "^0.7.0"
torch = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.782"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
