[tool.poetry]
name = "torch_anomaly_detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
matplotlib = "^3.2.2"
mlflow = "^1.23.1"
numpy = "^1.21.0"
pandas = "^1.1.0"
pillow = "^7.2.0"
python = "^3.7"
pytorch-lightning = "0.9.0"
torch = "1.6.0"
torchvision = "0.7.0"
torchsummary = "^1.5.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
jupyter = "^1.0.0"
jupyterlab = "^2.2.4"
mypy = "^0.782"
setuptools = "^49.1.2"
tensorflow = "^2.2.0"
tensorboard = "2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
