[tool.poetry]
name = "torch_classification_sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.54.1"
pandas = "^1.1.5"
scikit-learn = "^0.23.2"
torchvision = "^0.8.2"
torch = "^1.7.1"
pytorch-lightning = "^1.1.1"
mlflow = "^1.12.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
