[tool.poetry]
name = "torch_time_series_forecasting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
black = "^19.10b0"
flake8 = "^3.8.2"
mypy = "^0.780"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.2"
mypy = "^0.780"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
