[tool.poetry]
name = "torch_time_series_forecasting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1"
black = "^19.10b0"
flake8 = "^3.8.2"
mypy = "^0.780"
tqdm = "^4.46.1"
pandas = "^1.0.4"
torch = "^1.5.0"
pytorch_lightning = "^0.7.6"
sklearn = "^0.0"
scikit-learn = "^0.23.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.2"
mypy = "^0.780"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
