[tool.poetry]
name = "torch_time_series_forecasting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
tqdm = "^4.46.1"
python = ">=3.6.1"
pytorch_lightning = "^0.7.6"
pandas = "^1.0.4"
scikit-learn = "^0.23.1"
sklearn = "^0.0"
torch = "^1.5.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.2"
mypy = "^0.780"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
