[tool.poetry]
name = "torch_autoencoder"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.4.0"
torchvision = "^0.5.0"
tqdm = "^4.42.1"
pandas = "^1.0.1"
matplotlib = "^3.1.3"
sklearn = "^0.0"
scikit-learn = "^0.22.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
