[tool.poetry]
name = "torch_deep_temporal_clustering"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.43.0"
torch = "^1.3.1"
pytorch-lightning = "^0.6.0"
sktime = "^0.3.1"
torchvision = "^0.4.2"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
