[project]
authors = [{name = "iimuz", email = "hoge@example.com"}]
description = "hoge"
license = {file = "LICENSE"}
name = "minimal-python"
readme = "README.md"
requires-python = ">=3.10"
urls = {repository = "https://example.com/hoge"}
version = "1.0.0"

dependencies = []

[tools.setuptools.package-dir]
minimal_python = "src"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "flake8-black",
  "flake8-bugbear",
  "flake8-docstrings",
  "flake8-isort",
  "isort",
  "mypy",
]
test = ["pytest"]

[build-system]
requires = ["setuptools>=63", "wheel"]

[tool.isort]
profile = "black"
