[metadata]
name = minimal-python
version = 1.0.0
url = https://example.com/hoge
author = iimuz
author_email = hoge@example.com
license = MIT
license_files =
    LICENSE
description = hoge
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
packages = find:
python_requires = >=3.7

[flake8]
max-line-length = 88
extend-ignore = D400, D403

[isort]
profile = black
