[metadata]
name = import-bank-statement
version = 1.0.0
url = https://github.com/iimuz/til/src/til-20221113/
author = iimuz
author_email = iz.primary.story+github@gmail.com
license = MIT
license_files =
    LICENSE
description = Import bank statement csv files.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
packages = find:
python_requires = >=3.10

[flake8]
max-line-length = 88
extend-ignore = D400, D403

[isort]
profile = black
