[metadata]
name = mt4-csv-db
version = 1.0.0
url = https://github.com/iimuz/til/src/til-20221120
author = iimuz
author_email = iz.primary.story+github@gmail.com
license = MIT
license_files =
    LICENSE
description = MT4 csv to DB
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
packages = find:
python_requires = >=3.10

[flake8]
max-line-length = 88
extend-ignore = D400, D403

[isort]
profile = black
