[metadata]
name = hands-on-serverless-2
version = 1.0.0
url = https://github.com/iimuz/til/src/til-20221127
author = iimuz
author_email = iz.primary.story+github@gmail.com
license = MIT
license_files =
    LICENSE
description = Copy hands-on-serverless-2
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
packages = find:
python_requires = >=3.7

[flake8]
max-line-length = 88
extend-ignore = D400, D403

[isort]
profile = black
