[metadata]
name = altair-react
version = 1.0.0
author = iimuz
license = MIT
license_files =
    LICENSE
description = python + altair + typescript + react
long_description = file: ../README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
packages = find:
python_requires = >=3.8

[flake8]
max-line-length = 88
extend-ignore = D400, D403

[isort]
profile = black
